<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/action_sort_by"
        app:showAsAction="always">
        <!-- movies submenu -->
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/action_popular_movies"
                    android:checked="true"
                    android:title="@string/action_popular" />

                <item
                    android:id="@+id/action_top_rated"
                    android:title="@string/action_top_rated" />
            </group>
        </menu>
    </item>

</menu>